feat(backend): fully merged and processed the magic links update
